fix: users can click areas that are behind titles

--- a/IndoorMapsFrontend/src/routes/BuildingViewer/styles/BuildingViewer.css
+++ b/IndoorMapsFrontend/src/routes/BuildingViewer/styles/BuildingViewer.css
@@ -41,6 +41,7 @@
     opacity: 0;
     transition: opacity .4s;
     background: rgba(255, 255, 255, 0.8) !important;
+    pointer-events: none;
 }
 
 .AreaSearch {
